--- a/sample.bib
+++ b/sample.bib
@@ -131,6 +131,16 @@ series = {XP '16 Workshops}
   note = "[Online; accessed 22-February-2022]"
 }
 
+@misc{circleci:swarm_kubernetes,
+  author = {Powell, R.},
+  title = "Docker Swarm vs Kubernetes: how to choose a container orchestration tool",
+  year = "2022",
+  howpublished = {\url{https://circleci.com/blog/docker-swarm-vs-kubernetes/#:~:text=Docker%20Swarm%20is%20a%20lightweight,capabilities%20out%20of%20the%20box.}},
+  note = "[Online; accessed 27-February-2022]"
+}
+
+
+
 
 
  
